// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/BleveSettings should match snapshot, disabled 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
  role="form"
>
  <div
    className="wrapper--fixed"
  >
    <AdminHeader>
      <MemoizedFormattedMessage
        defaultMessage="Bleve"
        id="admin.bleve.title"
      />
    </AdminHeader>
    <Memo(SettingsGroup)>
      <Memo(BooleanSetting)
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="When true, indexing of new posts occurs automatically. Search queries will use database search until \\"Enable Bleve for search queries\\" is enabled. <link>Learn more about Bleve in our documentation.</link>"
            id="admin.bleve.enableIndexingDescription"
            values={
              Object {
                "link": [Function],
              }
            }
          />
        }
        id="enableIndexing"
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Enable Bleve Indexing:"
            id="admin.bleve.enableIndexingTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value={false}
      />
      <AdminTextSetting
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Directory path to use for store bleve indexes."
            id="admin.bleve.indexDirDescription"
          />
        }
        id="indexDir"
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Index Directory:"
            id="admin.bleve.indexDirTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value=""
      />
      <SettingSet
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Bulk Indexing:"
            id="admin.bleve.bulkIndexingTitle"
          />
        }
      >
        <div
          className="job-table-setting"
        >
          <Connect(JobTable)
            createJobButtonText={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Index Now"
                id="admin.bleve.createJob.title"
              />
            }
            createJobHelpText={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="All users, channels and posts in the database will be indexed from oldest to newest. Bleve is available during indexing but search results may be incomplete until the indexing job is complete."
                id="admin.bleve.createJob.help"
              />
            }
            disabled={true}
            getExtraInfoText={[Function]}
            jobType="bleve_post_indexing"
          />
        </div>
      </SettingSet>
      <RequestButton
        buttonText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Purge Index"
            id="admin.bleve.purgeIndexesButton"
          />
        }
        disabled={true}
        errorMessage={
          Object {
            "defaultMessage": "Failed to purge indexes: {error}",
            "id": "admin.bleve.purgeIndexesButton.error",
          }
        }
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Purging will entirely remove the content of the Bleve index directory. Search results may be incomplete until a bulk index of the existing database is rebuilt."
            id="admin.bleve.purgeIndexesHelpText"
          />
        }
        id="purgeIndexesSection"
        includeDetailedError={false}
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Purge Indexes:"
            id="admin.bleve.purgeIndexesButton.label"
          />
        }
        requestAction={[MockFunction]}
        saveNeeded={false}
        showSuccessMessage={true}
        successMessage={
          Object {
            "defaultMessage": "Indexes purged successfully.",
            "id": "admin.bleve.purgeIndexesButton.success",
          }
        }
      />
      <Memo(BooleanSetting)
        disabled={true}
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="When true, Bleve will be used for all search queries using the latest index. Search results may be incomplete until a bulk index of the existing post database is finished. When false, database search is used."
            id="admin.bleve.enableSearchingDescription"
          />
        }
        id="enableSearching"
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Enable Bleve for search queries:"
            id="admin.bleve.enableSearchingTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value={false}
      />
      <Memo(BooleanSetting)
        disabled={true}
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="When true, Bleve will be used for all autocompletion queries on users and channels using the latest index. Autocompletion results may be incomplete until a bulk index of the existing users and channels database is finished. When false, database autocomplete is used."
            id="admin.bleve.enableAutocompleteDescription"
          />
        }
        id="enableAutocomplete"
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Enable Bleve for autocomplete queries:"
            id="admin.bleve.enableAutocompleteTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value={false}
      />
    </Memo(SettingsGroup)>
    <div
      className="admin-console-save"
    >
      <SaveButton
        disabled={true}
        onClick={[Function]}
        saving={false}
        savingMessage={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Saving Config..."
            id="admin.saving"
          />
        }
      />
      <WithTooltip
        title=""
      >
        <div
          className="error-message"
        >
          <Memo(FormError)
            error={null}
          />
        </div>
      </WithTooltip>
    </div>
  </div>
</form>
`;

exports[`components/BleveSettings should match snapshot, enabled 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
  role="form"
>
  <div
    className="wrapper--fixed"
  >
    <AdminHeader>
      <MemoizedFormattedMessage
        defaultMessage="Bleve"
        id="admin.bleve.title"
      />
    </AdminHeader>
    <Memo(SettingsGroup)>
      <Memo(BooleanSetting)
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="When true, indexing of new posts occurs automatically. Search queries will use database search until \\"Enable Bleve for search queries\\" is enabled. <link>Learn more about Bleve in our documentation.</link>"
            id="admin.bleve.enableIndexingDescription"
            values={
              Object {
                "link": [Function],
              }
            }
          />
        }
        id="enableIndexing"
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Enable Bleve Indexing:"
            id="admin.bleve.enableIndexingTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value={true}
      />
      <AdminTextSetting
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Directory path to use for store bleve indexes."
            id="admin.bleve.indexDirDescription"
          />
        }
        id="indexDir"
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Index Directory:"
            id="admin.bleve.indexDirTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value="bleve.idx"
      />
      <SettingSet
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Bulk Indexing:"
            id="admin.bleve.bulkIndexingTitle"
          />
        }
      >
        <div
          className="job-table-setting"
        >
          <Connect(JobTable)
            createJobButtonText={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Index Now"
                id="admin.bleve.createJob.title"
              />
            }
            createJobHelpText={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="All users, channels and posts in the database will be indexed from oldest to newest. Bleve is available during indexing but search results may be incomplete until the indexing job is complete."
                id="admin.bleve.createJob.help"
              />
            }
            disabled={false}
            getExtraInfoText={[Function]}
            jobType="bleve_post_indexing"
          />
        </div>
      </SettingSet>
      <RequestButton
        buttonText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Purge Index"
            id="admin.bleve.purgeIndexesButton"
          />
        }
        disabled={false}
        errorMessage={
          Object {
            "defaultMessage": "Failed to purge indexes: {error}",
            "id": "admin.bleve.purgeIndexesButton.error",
          }
        }
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Purging will entirely remove the content of the Bleve index directory. Search results may be incomplete until a bulk index of the existing database is rebuilt."
            id="admin.bleve.purgeIndexesHelpText"
          />
        }
        id="purgeIndexesSection"
        includeDetailedError={false}
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Purge Indexes:"
            id="admin.bleve.purgeIndexesButton.label"
          />
        }
        requestAction={[MockFunction]}
        saveNeeded={false}
        showSuccessMessage={true}
        successMessage={
          Object {
            "defaultMessage": "Indexes purged successfully.",
            "id": "admin.bleve.purgeIndexesButton.success",
          }
        }
      />
      <Memo(BooleanSetting)
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="When true, Bleve will be used for all search queries using the latest index. Search results may be incomplete until a bulk index of the existing post database is finished. When false, database search is used."
            id="admin.bleve.enableSearchingDescription"
          />
        }
        id="enableSearching"
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Enable Bleve for search queries:"
            id="admin.bleve.enableSearchingTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value={false}
      />
      <Memo(BooleanSetting)
        helpText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="When true, Bleve will be used for all autocompletion queries on users and channels using the latest index. Autocompletion results may be incomplete until a bulk index of the existing users and channels database is finished. When false, database autocomplete is used."
            id="admin.bleve.enableAutocompleteDescription"
          />
        }
        id="enableAutocomplete"
        label={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Enable Bleve for autocomplete queries:"
            id="admin.bleve.enableAutocompleteTitle"
          />
        }
        onChange={[Function]}
        setByEnv={false}
        value={false}
      />
    </Memo(SettingsGroup)>
    <div
      className="admin-console-save"
    >
      <SaveButton
        disabled={true}
        onClick={[Function]}
        saving={false}
        savingMessage={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Saving Config..."
            id="admin.saving"
          />
        }
      />
      <WithTooltip
        title=""
      >
        <div
          className="error-message"
        >
          <Memo(FormError)
            error={null}
          />
        </div>
      </WithTooltip>
    </div>
  </div>
</form>
`;
